--- a/SimpleBlog/packages.config
+++ b/SimpleBlog/packages.config
@@ -6,4 +6,5 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net46" />
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net46" />
 </packages>
