--- a/SimpleBlog/Web.config
+++ b/SimpleBlog/Web.config
@@ -11,6 +11,18 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <system.web>
+    
+    <authentication mode ="Forms">
+      <forms loginUrl="~/login"/>
+    </authentication>
+
+    <roleManager enabled="true" defaultProvider="SimpleBlogRoleProvider">
+      <providers>
+        <clear/>
+        <add name ="SimpleBlogRoleProvider" type ="SimpleBlog.Infrastructure.RoleProvider"/>
+      </providers>
+    </roleManager>
+    
     <compilation debug="true" targetFramework="4.6"/>
     <httpRuntime targetFramework="4.6"/>
   </system.web>
