Added FluentMigrator, a UsersAndRoles migrator, and a batch file for running the migration.

--- a/SimpleBlog/Web.config
+++ b/SimpleBlog/Web.config
@@ -10,6 +10,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+
+  <connectionStrings>
+    <add name="MainDb" connectionString="Server=localhost;Database=simpleblog;User Id=root;Password=mysql;"/>
+  </connectionStrings>
   <system.web>
     
     <authentication mode="Forms">
