--- a/SimpleBlog/Web.config
+++ b/SimpleBlog/Web.config
@@ -12,7 +12,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="MainDb" connectionString="Server=localhost;Database=simpleblog;User Id=root;Password=mysql;"/>
+    <add name="MainDb" connectionString="Server=localhost;Database=simpleblog;User Id=root;Password=mysql;" />
   </connectionStrings>
   <system.web>
     
@@ -60,4 +60,9 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-</configuration>
+<system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data></configuration>
