Added and configured NHibernate

--- a/SimpleBlog/Web.config
+++ b/SimpleBlog/Web.config
@@ -4,6 +4,10 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate"/>
+  </configSections>
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -14,6 +18,15 @@
   <connectionStrings>
     <add name="MainDb" connectionString="Server=localhost;Database=simpleblog;User Id=root;Password=mysql;" />
   </connectionStrings>
+ 
+  <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
+    <session-factory>
+      <property name="dialect">NHibernate.Dialect.MySQLDialect</property>
+      <property name="connection.driver_class">NHibernate.Driver.MySqlDataDriver</property>
+      <property name="connection.connection_string_name">MainDb</property>
+    </session-factory>
+  </hibernate-configuration>
+  
   <system.web>
     
     <authentication mode="Forms">
