--- a/SimpleBlog/packages.config
+++ b/SimpleBlog/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net46" />
   <package id="bootstrap" version="3.0.0" targetFramework="net46" />
   <package id="FluentMigrator" version="1.6.0" targetFramework="net46" />
+  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net46" />
   <package id="jQuery" version="1.10.2" targetFramework="net46" />
   <package id="jQuery.Validation" version="1.14.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
@@ -16,5 +17,6 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net46" />
   <package id="MySql.Data" version="6.9.7" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
+  <package id="NHibernate" version="4.0.4.4000" targetFramework="net46" />
   <package id="WebGrease" version="1.5.2" targetFramework="net46" />
 </packages>
