--- a/SimpleBlog/Web.Release.config
+++ b/SimpleBlog/Web.Release.config
@@ -28,4 +28,8 @@
       </customErrors>
     -->
   </system.web>
+  <system.webServer>
+    <httpErrors errorMode="DetailedLocalOnly" existingResponse="Replace" xdt:Transform="SetAttributes">
+    </httpErrors>
+  </system.webServer>
 </configuration>
