--- a/SimpleBlog/Web.config
+++ b/SimpleBlog/Web.config
@@ -6,8 +6,14 @@
 <configuration>
   <configSections>
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
+    <sectionGroup name="elmah">
+      <section name="security" requirePermission="false" type="Elmah.SecuritySectionHandler, Elmah" />
+      <section name="errorLog" requirePermission="false" type="Elmah.ErrorLogSectionHandler, Elmah" />
+      <section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
+      <section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
+    </sectionGroup>
   </configSections>
-  
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -18,7 +24,7 @@
   <connectionStrings>
     <add name="MainDb" connectionString="Server=localhost;Database=simpleblog;User Id=root;Password=mysql;" />
   </connectionStrings>
- 
+
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
       <property name="dialect">NHibernate.Dialect.MySQLDialect</property>
@@ -26,9 +32,9 @@
       <property name="connection.connection_string_name">MainDb</property>
     </session-factory>
   </hibernate-configuration>
-  
+
   <system.web>
-    
+
     <authentication mode="Forms">
       <forms loginUrl="~/login" />
     </authentication>
@@ -39,9 +45,14 @@
         <add name="SimpleBlogRoleProvider" type="SimpleBlog.Infrastructure.RoleProvider" />
       </providers>
     </roleManager>
-    
+
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
+    <httpModules>
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" />
+      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" />
+      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" />
+    </httpModules>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -69,6 +80,10 @@
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.5.0.2" newVersion="3.5.0.2" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MySql.Data" publicKeyToken="c5687fc88969c44d" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.9.7.0" newVersion="6.9.7.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -77,9 +92,62 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-<system.data>
+  <system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient" />
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.7.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
-  </system.data></configuration>
+  </system.data>
+
+
+  <system.webServer>
+    <httpErrors errorMode="DetailedLocalOnly" existingResponse="PassThrough">
+      <remove statusCode="502" />
+      <remove statusCode="501" />
+      <remove statusCode="500" />
+      <remove statusCode="404" />
+
+      <error statusCode="502" path="/errors/500" responseMode="ExecuteUrl" />
+      <error statusCode="501" path="/errors/500" responseMode="ExecuteUrl" />
+      <error statusCode="500" path="/errors/500" responseMode="ExecuteUrl" />
+      <error statusCode="400" path="/errors/400" responseMode="ExecuteUrl" />
+    </httpErrors>
+
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules>
+      <add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
+      <add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
+      <add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
+    </modules>
+  </system.webServer>
+  <elmah>
+    <!--
+        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
+        more information on remote access and securing ELMAH.
+    -->
+    <security allowRemoteAccess="true" />
+  </elmah>
+  <location path="elmah.axd" inheritInChildApplications="false">
+    <system.web>
+      <httpHandlers>
+        <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" />
+      </httpHandlers>
+      
+      <!-- 
+        See http://code.google.com/p/elmah/wiki/SecuringErrorLogPages for 
+        more information on using ASP.NET authorization securing ELMAH.
+      -->
+      
+      <authorization>
+        <allow roles="admin" />
+        <deny users="*" />  
+      </authorization>
+
+    </system.web>
+    <system.webServer>
+      <handlers>
+        <add name="ELMAH" verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah" preCondition="integratedMode" />
+      </handlers>
+    </system.webServer>
+  </location>
+</configuration>
