--- a/SimpleBlog/packages.config
+++ b/SimpleBlog/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net46" />
   <package id="BCrypt.Net" version="0.1.0" targetFramework="net46" />
+  <package id="elmah" version="1.2.2" targetFramework="net46" />
+  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net46" />
   <package id="FluentMigrator" version="1.6.0" targetFramework="net46" />
   <package id="Iesi.Collections" version="4.0.1.4000" targetFramework="net46" />
   <package id="jQuery" version="2.1.4" targetFramework="net46" />
